--- a/src/common.css
+++ b/src/common.css
@@ -16,3 +16,20 @@ p, h1, h2, h3 {
     margin: 0;
 }
 
+/*ТОВАР В НАЛИЧИИ*/
+.sand {
+    grid-column: 1/2;
+    grid-row: 2/3;
+}
+
+.macadam {
+    grid-column: 2/3;
+    grid-row: 2/3;
+}
+
+.soil {
+    grid-column: 3/4;
+    grid-row: 2/3;
+}
+/*ТОВАР В НАЛИЧИИ*/
+
